--- a/flyaway-Search/pom.xml
+++ b/flyaway-Search/pom.xml
@@ -5,4 +5,21 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>JSP Servlet Hibernate Flight Search</name>
   <description>JSP Servlet Hibernate Flight Search</description>
+  
+   <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.10.Final</version>
+        </dependency>
+
+    </dependencies>
+  
 </project>
