--- a/flyaway-Search/pom.xml
+++ b/flyaway-Search/pom.xml
@@ -5,6 +5,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>JSP Servlet Hibernate Flight Search</name>
   <description>JSP Servlet Hibernate Flight Search</description>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
    <dependencies>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -21,5 +24,9 @@
         </dependency>
 
     </dependencies>
+     <!-- To define the plugin version in your parent POM -->
+    <build>
+    
+    </build>
   
 </project>
